# X-beast

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
docs/architecture/: agent-roles.md  system-overview.md
docs/decisions/: 001-repo-structure.md  002-human-in-the-loop.md  003-no-autoposting-yet.md
docs/operating-manual/: content-standards.md  daily-run.md  weekly-review.md
examples/: daily-run-example.md  reviewed-post-example.md  weekly-learning-example.md
knowledge/personas/: business-reviewer.md  karpathy-reviewer.md  voice-guard.md  x-mentor-lead.md
knowledge/rubrics/: draft-review-rubric.md  hook-rubric.md  idea-scorecard.md  postmortem-rubric.md
pipeline/: 01-idea-intake.md  02-idea-scoring.md  03-hook-generation.md  04-draft-generation.md  05-review-router.md  06-final-polish.md  07-publish-check.md  08-postmortem.md
scripts/: generate_hooks.py  package_final_post.py  review_drafts.py  run_daily_pipeline.py  score_ideas.py  weekly_learnings.py
src/x_beast/: __init__.py  analytics.py  drafting.py  models.py  review.py  routing.py  scoring.py  storage.py  utils.py
templates/: daily-brief.template.md  post-draft.template.md  reply-bank.template.md  review-report.template.md  thread.template.md  weekly-learning.template.md
tests/: test_review_router.py  test_scoring.py  test_storage.py  test_weekly_learnings.py
